fix broken layout in mobile

--- a/src/client/styles/responsive.less
+++ b/src/client/styles/responsive.less
@@ -216,6 +216,10 @@
         display: none;
         font-size: 12px;
       }
+
+      &:after {
+        display: none;
+      }
     }
 
     .join-info {
@@ -227,7 +231,7 @@
 
       a {
         min-height: 64px;
-        font-size: 18px;
+        font-size: 24px;
         font-weight: 700;
         padding: 12px 0;
         line-height: 40px;
